Fix backlink title color to white in dark mode

--- a/_sass/_knowledge-base.scss
+++ b/_sass/_knowledge-base.scss
@@ -1318,7 +1318,7 @@ body.dark-mode {
       }
 
       .backlink-title {
-        color: #e2e8f0;
+        color: #ffffff;
 
         &:hover {
           color: #86efac;
